--- a/Templates/Registration.html
+++ b/Templates/Registration.html
@@ -38,6 +38,24 @@
             <div class="container signin">
                 <p>Already have an account? <a href="#">Sign in</a>.</p>
         </form>
-    </div>
+        {% if message1 %}
+        <div class = "container" style="text-align: center;">
+        <div class="alert alert-success">
+          <a class ="close" data-dismiss="alert" aria-label="close">&times;</a> 
+        {{message1}}
+        </div>
+        </div>
+        {%endif%}
+        {% if message %}
+        <div class = "container" style="text-align: center;">
+        <div class="alert alert-danger">
+          <a class ="close" data-dismiss="alert" aria-label="close">&times;</a> 
+        {{message}}
+        </div>
+        </div>
+        {%endif%}
+  
+        
+
    </body>
 </html>
