--- a/Templates/Registration.html
+++ b/Templates/Registration.html
@@ -37,7 +37,7 @@
             <button type="submit" class="btn btn-primary mb-2">Register</button>
           
 
-            <button type="submit" action="log" formaction = "http://127.0.0.1:5000/auth" class = "btn btn-primary mb-2">Login</button>
+            <button type="submit" action="log" formaction = "/auth" class = "btn btn-primary mb-2">Login</button>
          
         </form>
         {% if message1 %}
