--- a/Templates/login.html
+++ b/Templates/login.html
@@ -26,6 +26,6 @@
    <body>
       <h2> Login successfully  </h2>
       <form action = "/" >
-      <button type="submit"  class = "logout" formaction = "http://127.0.0.1:5000/home" value="Logout">Logout</button>
+      <button type="submit"  class = "logout" formaction = "/logout" value="Logout">Logout</button>
     </form>
     </body>
